--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
               <h1 class="ud-hero-title">
-                Open-Source Web Template for SaaS, Startup, Apps, and More
+                SpiritAI transforms imagination into influence with gen-AI technologies
               </h1>
               <p class="ud-hero-desc">
-                Multidisciplinary Web Template Built with Your Favourite
-                Technology - HTML Bootstrap, Tailwind and React NextJS.
+                We generate the future of content. 
+                
               </p>
               <ul class="ud-hero-buttons">
                 <li>
