--- a/index.html
+++ b/index.html
@@ -221,76 +221,56 @@
           <div class="col-lg-12">
             <div class="ud-section-title">
               <span>Features</span>
-              <h2>Main Features of Play</h2>
+              <h2>Main Products</h2>
               <p>
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+                Spirit AI offers next-gen generative AI tools for modeling, video creation, and storytelling — designed for the future of digital marketing.
               </p>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-3 col-lg-3 col-sm-6">
+          <!-- SAME -->
+          <div class="col-xl-4 col-lg-4 col-sm-6">
             <div class="ud-single-feature wow fadeInUp" data-wow-delay=".1s">
               <div class="ud-feature-icon">
-                <i class="lni lni-gift"></i>
+                <i class="lni lni-user"></i>
               </div>
               <div class="ud-feature-content">
-                <h3 class="ud-feature-title">Free and Open-Source</h3>
+                <h3 class="ud-feature-title">SAME</h3>
                 <p class="ud-feature-desc">
-                  Lorem Ipsum is simply dummy text of the printing and industry.
+                  Spirit AI Model Extractor creates lifelike AI models from text or reference images — perfect for digital influencers and virtual campaigns.
                 </p>
-                <a href="javascript:void(0)" class="ud-feature-link">
-                  Learn More
-                </a>
+                <a href="javascript:void(0)" class="ud-feature-link">Learn More</a>
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-3 col-sm-6">
+          <!-- SAVE -->
+          <div class="col-xl-4 col-lg-4 col-sm-6">
             <div class="ud-single-feature wow fadeInUp" data-wow-delay=".15s">
               <div class="ud-feature-icon">
-                <i class="lni lni-move"></i>
+                <i class="lni lni-video"></i>
               </div>
               <div class="ud-feature-content">
-                <h3 class="ud-feature-title">Multipurpose Template</h3>
+                <h3 class="ud-feature-title">SAVE</h3>
                 <p class="ud-feature-desc">
-                  Lorem Ipsum is simply dummy text of the printing and industry.
+                  Spirit AI Video Engine generates dynamic, location-aware video content — enabling automated AI-driven vlogs, ads, and short reels.
                 </p>
-                <a href="javascript:void(0)" class="ud-feature-link">
-                  Learn More
-                </a>
+                <a href="javascript:void(0)" class="ud-feature-link">Learn More</a>
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-3 col-sm-6">
+          <!-- SAG -->
+          <div class="col-xl-4 col-lg-4 col-sm-6">
             <div class="ud-single-feature wow fadeInUp" data-wow-delay=".2s">
               <div class="ud-feature-icon">
-                <i class="lni lni-layout"></i>
+                <i class="lni lni-pencil-alt"></i>
               </div>
               <div class="ud-feature-content">
-                <h3 class="ud-feature-title">High-quality Design</h3>
+                <h3 class="ud-feature-title">SAG</h3>
                 <p class="ud-feature-desc">
-                  Lorem Ipsum is simply dummy text of the printing and industry.
+                  Spirit Action Generator writes scenes, captions, and storyboards using AI — for seamless narrative automation in media campaigns.
                 </p>
-                <a href="javascript:void(0)" class="ud-feature-link">
-                  Learn More
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-single-feature wow fadeInUp" data-wow-delay=".25s">
-              <div class="ud-feature-icon">
-                <i class="lni lni-layers"></i>
-              </div>
-              <div class="ud-feature-content">
-                <h3 class="ud-feature-title">All Essential Elements</h3>
-                <p class="ud-feature-desc">
-                  Lorem Ipsum is simply dummy text of the printing and industry.
-                </p>
-                <a href="javascript:void(0)" class="ud-feature-link">
-                  Learn More
-                </a>
+                <a href="javascript:void(0)" class="ud-feature-link">Learn More</a>
               </div>
             </div>
           </div>
@@ -298,7 +278,7 @@
       </div>
     </section>
     <!-- ====== Features End ====== -->
-
+    
     <!-- ====== About Start ====== -->
     <section id="about" class="ud-about">
       <div class="container">
