--- a/index.html
+++ b/index.html
@@ -700,14 +700,14 @@
               </div>
               <div class="ud-brands-logo">
                 <div class="ud-single-logo">
-                  <img src="assets/images/brands/ayroui.svg" alt="ayroui" />
+                  <img src="efeimages/1 2.png" alt="ayroui" />
                 </div>
                 <div class="ud-single-logo">
-                  <img src="assets/images/brands/uideck.svg" alt="uideck" />
+                  <img src="efeimages/1 2.png" alt="uideck" />
                 </div>
                 <div class="ud-single-logo">
                   <img
-                    src="assets/images/brands/graygrids.svg"
+                    src="efeimages/1 2.png"
                     alt="graygrids"
                   />
                 </div>
